--- a/Tarea1.html
+++ b/Tarea1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="titulo">
-        <h1>Tarea Clase 1</h1>
+        <h1>Tarea Clase Nº1 || rArgentina Programa 2020</h1>
     </div>
     <br><br>
     <div class="container">
@@ -19,14 +19,54 @@
             <br><br>
 
             <button id="calcular">Calcular</button>
-            <button type="reset" id="resetear">Reset</button>
+            <button type="reset" id="resetear">Resetear</button>
             <br>
             <label id="etiqueta-edad" class="oculto"><p>Edad</p></label>
             <input type="text" id="input-edad" class="oculto" disabled>
 
         </form>
     </div>
-   
+    <div class="container">
+        <label for=""><p>Salario Anual</p></label>
+        <input type="text" id="salario-anual">
+        <br><br>
+
+        <button id="calcular2">Calcular</button>
+        <button type="reset" id="resetear2">Resetear</button>
+        <br><br>
+
+        <label class="oculto" id="etiqueta-salario-anual"><p>Salario Mensual</p></label>
+        <input type="text" class="oculto" id="input-salario-anual" disabled >
+
+    </div>
+
+    <div class="container">
+        <form action="">
+            <label for=""><p>Salario Mensual</p></label>
+            <input type="text" id="salario-mensual">
+            <br><br>
+    
+            <button id="calcular3">Calcular</button>
+            <button type="reset" id="resetear3">Resetear</button>
+            <br><br>
+    
+            <label class="oculto" id="etiqueta-salario-anual2"><p>Salario Anual</p></label>
+            <input type="text" class="oculto" id="input-salario-anual2" disabled >
+            <br><br>
+
+            <label class="oculto" id="tag-diario"><p>Salario Diario</p> </label>
+            <input type="text" class="oculto" id="input-salario-diario" disabled >
+            <br><br>
+
+            <label class="oculto" id="etiqueta-salario-hora"><p>Salario por Hora</p></label>
+            <input type="text" class="oculto" id="input-salario-hora" disabled >
+            <br><br>
+        </form>
+
+    </div>
     <script src='tarea1.js'></script>
 </body>
+<footer>
+    <h2>Esto es un Footer sin sentido alguno || rArgentina Programa 2020 </h2>
+</footer>
 </html>
