--- a/Tarea1.html
+++ b/Tarea1.html
@@ -66,6 +66,7 @@
 
     </div>
     <script src='tarea1.js'></script>
+    <script src='test1.js'></script>
 </body>
 <footer>
     <h2>Esto es un Footer sin sentido alguno || rArgentina Programa 2020 </h2>
